# DefineExtractor

./: .gitignore  CMAKE_VS_SETUP.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
DefineExtractor/: DefineExtractor.cpp  helpers.h
tests/: test_helpers.cpp
